	- Added Hynix SSD series
	- Added AMD Radeon Solid State Drives (#762)
	- Added USB Bridge 0x3538:0x0064 (#855)
	- Added Seagate ST4000NM0085 to the Capacity family
	- Added Sandisk SATA Cloudspeed Max and GEN2 ESS SSDs and Sandisk SATA CS1K
	  GEN1 ESS SSDs (#846)
	- Added Seagate FireCuda drives (#825)
	- Added Transcend-MTS400 drives (#847)
	- Added Intel 540 Series SSDs (#803)
	
2017-09-20  Alex Samorukov  <samm@os2.kiev.ua>

	os_freebsd: use /dev/nvme/nvme.h on the recent versions
	os_darwin: 
	 - initial NVMe support for the darwin platform.
	 - NVMe device scan support
	 - Add device type autodetection

2017-08-08  Christian Franke  <franke@computer.org>

	ataprint.cpp: Fix ATA Security Level check.

	configure.ac: Detect MinGW libstdc++ problems with high
	'--image-base'.

	Update smartmontools-support mailing list address.
	Remove old mailing list address from all source files.

2017-05-03  Christian Franke  <franke@computer.org>

	smartctl.8.in, smartd.8.in, smartd.conf.5.in,
	update-smart-drivedb.8.in:
	Rework vertical space and '.nf...fi' (no-fill) sections
	for better formatting with various tools (groff, mandoc,
	man2html) and output formats (text, pdf, html).
	Use default vertical space instead of an empty line
	between paragraphs.
	Use '.br' instead of '.nf...fi' where applicable.
	Use CW font in remaining no-fill sections.

	smartctl.8.in: Replace UTF-8 quotes.

2017-05-02  Christian Franke  <franke@computer.org>

	smartctl.8.in, smartd.8.in, smartd.conf.5.in,
	update-smart-drivedb.8.in:
	Various man/groff syntax fixes (ticket #656):
	Split long lines.
	Insert two spaces or newline between sentences.
	Use ' for apostrophes.
	Use groff extension \(aq (apostrophe quote, ASCII 0x27)
	or ' for quotes.
	Use \- (minus sign) for options and examples.
	Use \(en (en-dash) for numeric ranges.
	Protect . with \& if not at end of sentence.

2017-04-24  Alex Samorukov  <samm@os2.kiev.ua>

	os_freebsd.cpp: remove duplicated code which checks ATA SMART